[project]
name = "llama-factory-explore"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "llamafactory @ file:///${PROJECT_ROOT}/src/LLaMA-Factory",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]
